rework the "AnnotationHelper" and bibliography system: * add generic "OpenHelper" in tagc.common, used by Tools.openURI(protocol, value) * implement Tools.openURI using "open" on windows (is it correct ?) and macosx and xdg-open on linux * rework the bibliography system to store used entries with the zginml file and move as much as possible away from referencer (referencer is just a parser now, adding support for other format will be easier)